<resources>
    <string name="app_name">Quero-Rodizio-Samuel-1513336</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="escolheTipo">Escolha o tipo de rodrizio:</string>
    <string name="pizza">Pizza</string>
    <string name="massas">Massas</string>
    <string name="sushi">Sushi</string>
    <string name="rodizio">Rodizio de :</string>
    <string name="Restaurante1">Restaurante 1</string>
    <string name="Restaurante2">Restaurante 2</string>
</resources>
