<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TelaOpcoesRestaurante">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/escolheTipo"
        android:textColor="@color/navy" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/massas"
        android:id="@+id/button"
        android:onClick="cliqueMassas"
        android:layout_marginTop="62dp"
        android:textColor="@color/aqua"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza"
        android:id="@+id/button2"
        android:onClick="cliquePizza"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:background="@color/background_material_dark"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sushi"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:onClick="cliqueSushi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@color/background_material_dark"
        android:textColor="@color/yellow" />
</RelativeLayout>
